# OpenRTI

./: .gitignore  CHANGES  CMakeLists.txt  LICENSE  README  README副本
python/: CMakeLists.txt
python/_fom/: CMakeLists.txt  Module.cpp
python/_rti1516/: CMakeLists.txt  Module.cpp
python/rti1516/: CMakeLists.txt  Module.cpp  __init__.py
python/rti1516e/: CMakeLists.txt  Module.cpp  __init__.py
src/: CMakeLists.txt
src/OpenRTI/: AbstractConnect.h  AbstractFederate.h  AbstractLogicalTime.h  AbstractMessage.cpp  AbstractMessage.h  AbstractMessageDecoder.cpp  AbstractMessageDecoder.h  AbstractMessageDispatcher.h  AbstractMessageEncoder.cpp  AbstractMessageEncoder.h  AbstractMessageEncoding.cpp  AbstractMessageEncoding.h  AbstractMessageQueue.h  AbstractMessageReceiver.h  AbstractMessageSender.cpp  AbstractMessageSender.h  AbstractNetworkServer.h  AbstractProtocol.h  AbstractProtocolLayer.cpp  AbstractProtocolLayer.h  AbstractProtocolSocket.cpp  AbstractProtocolSocket.h  AbstractServer.cpp  AbstractServer.h  AbstractServerNode.cpp  AbstractServerNode.h  AbstractSocketEvent.cpp  AbstractSocketEvent.h  Ambassador.h  Atomic.h  Attributes.cpp  Attributes.h  Buffer.h  CMakeLists.txt  Clock.h  Condition.h  ContentHandler.cpp  ContentHandler.h  DecodeDataStream.h  DefaultErrorHandler.cpp  (+178 more)
src/OpenRTI/codegen/: Message.xml  messagegen.py
src/OpenRTI/posix/: AtomicPosix.cpp  ClockPosix.cpp  ClockPosix.h  ConditionPosix.cpp  ConditionPrivateDataPosix.h  DynamicModulePosix.cpp  ErrnoPosix.h  MutexPosix.cpp  MutexPrivateDataPosix.h  SocketAddressPosix.cpp  SocketAddressPrivateDataPosix.h  SocketDataPosix.cpp  SocketEventDispatcherPosix.cpp  SocketPacketPosix.cpp  SocketPipePosix.cpp  SocketPosix.cpp  SocketPrivateDataPosix.h  SocketServerPipePosix.cpp  SocketServerPosix.cpp  SocketServerTCPPosix.cpp  SocketStreamPosix.cpp  SocketTCPPosix.cpp  SocketUDPPosix.cpp  SocketWakeupEventPosix.cpp  SocketWakeupTriggerPosix.cpp  ThreadLocalPosix.cpp  ThreadPosix.cpp  ThreadPrivateDataPosix.h
src/OpenRTI/win32/: AtomicWin32.cpp  ClockWin32.cpp  ClockWin32.h  ConditionPrivateDataWin32.h  ConditionWin32.cpp  DynamicModuleWin32.cpp  ErrnoWin32.cpp  ErrnoWin32.h  MutexPrivateDataWin32.h  MutexWin32.cpp  SocketAddressPrivateDataWin32.h  SocketAddressWin32.cpp  SocketDataWin32.cpp  SocketEventDispatcherWin32.cpp  SocketPacketWin32.cpp  SocketPipeWin32.cpp  SocketPrivateDataWin32.h  SocketServerPipeWin32.cpp  SocketServerTCPWin32.cpp  SocketServerWin32.cpp  SocketStreamWin32.cpp  SocketWin32.cpp  (+6 more)
src/RTI13/: AttributeHandleSetCallback.cpp  AttributeHandleSetCallback.h  AttributeHandleSetImplementation.cpp  AttributeHandleSetImplementation.h  AttributeHandleValuePairSetCallback.cpp  AttributeHandleValuePairSetCallback.h  AttributeHandleValuePairSetImplementation.cpp  AttributeHandleValuePairSetImplementation.h  CMakeLists.txt  Exception.cpp  FederateHandleSetImplementation.cpp  FederateHandleSetImplementation.h  ParameterHandleValuePairSetCallback.cpp  ParameterHandleValuePairSetCallback.h  ParameterHandleValuePairSetImplementation.cpp  ParameterHandleValuePairSetImplementation.h  RTI13LogicalTimeFactory.cpp  RTI13LogicalTimeFactory.h  RTIambPrivateRefs.cpp  RTIfedTime.cpp
src/qrti/: CMakeLists.txt  QHLAArrayDataElement.cpp  QHLAArrayDataElement.h  QHLAArrayDataType.cpp  QHLAArrayDataType.h  QHLABasicDataType.cpp  QHLABasicDataType.h  QHLADataElement.cpp  QHLADataElement.h  QHLADataType.cpp  QHLADataType.h  QHLADataTypeVisitor.h  QHLAEnumeratedDataElement.cpp  QHLAEnumeratedDataElement.h  QHLAEnumeratedDataType.cpp  QHLAEnumeratedDataType.h  QHLAFixedRecordDataElement.cpp  QHLAFixedRecordDataElement.h  QHLAFixedRecordDataType.cpp  QHLAFixedRecordDataType.h  QHLAScalarDataElement.cpp  QHLAScalarDataElement.h  QHLASimpleDataType.cpp  QHLASimpleDataType.h  QHLAStringDataElement.cpp  QHLAStringDataElement.h  QHLAVariantRecordDataElement.cpp  QHLAVariantRecordDataElement.h  QHLAVariantRecordDataType.cpp  QHLAVariantRecordDataType.h  QRTI1516Federate.h  QRTI1516OMTHandler.cpp  QRTI1516OMTHandler.h  QRTIFederate.cpp  QRTIFederate.h  QRTIObjectClass.cpp  QRTIObjectClass.h  QRTIObjectClassAttribute.cpp  QRTIObjectClassAttribute.h  QRTIObjectInstance.cpp  (+4 more)
src/rti1516/: CMakeLists.txt  Exception.cpp  FederateAmbassador.cpp  HLAfloat64Interval.cpp  HLAfloat64Time.cpp  HLAfloat64TimeFactory.cpp  HLAinteger64Interval.cpp  HLAinteger64Time.cpp  HLAinteger64TimeFactory.cpp  Handle.cpp  HandleFriend.h  HandleImplementation.h  LogicalTime.cpp  LogicalTimeFactory.cpp  LogicalTimeFactoryFactory.cpp  LogicalTimeInterval.cpp  NullFederateAmbassador.cpp  RTI1516LogicalTimeFactory.cpp  RTI1516LogicalTimeFactory.h  RTI1516fedTime.cpp  RTI1516float64TimeFactory.h  RTI1516integer64TimeFactory.h  RTIambassador.cpp  RTIambassadorFactory.cpp  RTIambassadorImplementation.cpp  RTIambassadorImplementation.h  RangeBounds.cpp  VariableLengthData.cpp  VariableLengthDataFriend.h  VariableLengthDataImplementation.h  Version.cpp
src/rti1516e/: BasicDataElements.cpp  CMakeLists.txt  DataElement.cpp  Encoding.h  EncodingExceptions.cpp  Exception.cpp  FederateAmbassador.cpp  HLAfixedArray.cpp  HLAfixedRecord.cpp  HLAfloat64Interval.cpp  HLAfloat64Time.cpp  HLAfloat64TimeFactory.cpp  HLAinteger64Interval.cpp  HLAinteger64Time.cpp  HLAinteger64TimeFactory.cpp  HLAlogicalTimeFactoryFactory.cpp  HLAopaqueData.cpp  HLAvariableArray.cpp  HLAvariantRecord.cpp  Handle.cpp  HandleFriend.h  HandleImplementation.h  LogicalTime.cpp  LogicalTimeFactory.cpp  LogicalTimeFactoryFactory.cpp  LogicalTimeInterval.cpp  NullFederateAmbassador.cpp  RTI1516ELogicalTimeFactory.cpp  RTI1516ELogicalTimeFactory.h  RTI1516Efloat64TimeFactory.h  RTI1516Einteger64TimeFactory.h  RTIambassador.cpp  RTIambassadorFactory.cpp  RTIambassadorImplementation.cpp  RTIambassadorImplementation.h  RangeBounds.cpp  Typedefs.cpp  VariableLengthData.cpp  VariableLengthDataFriend.h  VariableLengthDataImplementation.h  (+1 more)
src/rtinode/: CMakeLists.txt  rtinode-config.xml  rtinode.cpp
tests/RTI13/: CMakeLists.txt
tests/rti1516/: CMakeLists.txt  fdd.xml
tests/rti1516e/: CMakeLists.txt
(+158 files in other folders)
