# Try to find out if we have python
IF(OPENRTI_ENABLE_PYTHON_BINDINGS)
  FIND_PACKAGE(PythonInterp)
  IF(CMAKE_VERSION VERSION_GREATER 2.8.7)
    FIND_PACKAGE(PythonLibs)
  ELSE()
    FIND_PACKAGE(PythonLibsCompat)
  ENDIF()
ELSE()
  SET(PYTHONLIBS_FOUND FALSE)
ENDIF()

# Ok, had issues with too old python versions, may be 2.6 is too crude ...
INCLUDE(CheckCXXSourceCompiles)
IF(PYTHONLIBS_FOUND)
  # All the -I arguments
  SET(CMAKE_REQUIRED_INCLUDES ${PYTHON_INCLUDE_PATH})
  CHECK_CXX_SOURCE_COMPILES("
#include <Python.h>
#if PY_MAJOR_VERSION < 2
# error
#elif PY_MAJOR_VERSION == 2 && PY_MINOR_VERSION < 6
# error
#endif
int main(void)
{
  return 0;
}
" PYTHON_VERSION_OK)
ENDIF()

# If so, do what we need to do
IF(PYTHONLIBS_FOUND AND PYTHON_VERSION_OK)
  IF(WIN32)
    STRING(REGEX REPLACE "^([0-9]+).([0-9]+).*$" "\\1\\2" PYTHONLIBS_VERSION_STRING "${PYTHONLIBS_VERSION_STRING}")
    SET(INSTALL_PYTHON_DIRECTORY "Python${PYTHONLIBS_VERSION_STRING}/site-packages")
  ELSE()
    STRING(REGEX REPLACE "^([0-9]+.[0-9]+).*$" "\\1" PYTHONLIBS_VERSION_STRING "${PYTHONLIBS_VERSION_STRING}")
    SET(INSTALL_PYTHON_DIRECTORY "${CMAKE_INSTALL_LIBDIR}/python${PYTHONLIBS_VERSION_STRING}/site-packages")
  ENDIF()
  SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${INSTALL_PYTHON_DIRECTORY}")

  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
  IF(OPENRTI_ENABLE_RTI1516)
    ADD_SUBDIRECTORY(rti1516)
  ENDIF()
  IF(OPENRTI_ENABLE_RTI1516E)
    ADD_SUBDIRECTORY(rti1516e)
  ENDIF()
ENDIF()
