# Just for propper recursion
ADD_SUBDIRECTORY(OpenRTI)
ADD_SUBDIRECTORY(rtinode)

IF(OPENRTI_ENABLE_RTI13)
  ADD_SUBDIRECTORY(RTI13)
ENDIF()
IF(OPENRTI_ENABLE_RTI1516)
  ADD_SUBDIRECTORY(rti1516)
ENDIF()
IF(OPENRTI_ENABLE_RTI1516E)
  ADD_SUBDIRECTORY(rti1516e)
ENDIF()

IF(OPENRTI_ENABLE_QRTI)
  ADD_SUBDIRECTORY(qrti)
ENDIF()
