# Just for proper recursion
ADD_SUBDIRECTORY(OpenRTI)
ADD_SUBDIRECTORY(rtinode)

IF(OPENRTI_ENABLE_RTI13)
  IF(NOT WIN32 OR OPENRTI_BUILD_SHARED)
    ADD_SUBDIRECTORY(RTI13)
  ENDIF()
ENDIF()
IF(OPENRTI_ENABLE_RTI1516)
  ADD_SUBDIRECTORY(rti1516)
ENDIF()
IF(OPENRTI_ENABLE_RTI1516E)
  ADD_SUBDIRECTORY(rti1516e)
ENDIF()
