# Just for propper recursion
add_subdirectory(OpenRTI)
add_subdirectory(rtinode)

if(OPENRTI_ENABLE_RTI13)
  if(NOT WIN32 OR OPENRTI_BUILD_SHARED)
    add_subdirectory(RTI13)
  endif()
endif()
if(OPENRTI_ENABLE_RTI1516)
  add_subdirectory(rti1516)
endif()
if(OPENRTI_ENABLE_RTI1516E)
  add_subdirectory(rti1516e)
endif()
