# The rti1516 includes
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include/rti1516)

IF(OPENRTI_BUILD_SHARED)
  ADD_LIBRARY(rti1516_py MODULE Module.cpp)
  SET_PROPERTY(TARGET rti1516_py PROPERTY PREFIX "")
  SET_PROPERTY(TARGET rti1516_py PROPERTY OUTPUT_NAME "rti1516")
  IF(WIN32)
    SET_PROPERTY(TARGET rti1516_py PROPERTY SUFFIX ".pyd")
  ENDIF()
  TARGET_LINK_LIBRARIES(rti1516_py rti1516 fedtime1516 ${PYTHON_LIBRARIES})
ENDIF()

IF(OPENRTI_INSTALL_WITH_RPATH)
  SET_PROPERTY(TARGET rti1516_py PROPERTY INSTALL_RPATH "$ORIGIN/../..")
  SET_PROPERTY(TARGET rti1516_py APPEND PROPERTY LINK_FLAGS "${OPENRTI_RPATH_LINK_FLAGS}")
ENDIF()

INSTALL(TARGETS rti1516_py
  RUNTIME DESTINATION "${INSTALL_PYTHON_DIRECTORY}"
  LIBRARY DESTINATION "${INSTALL_PYTHON_DIRECTORY}"
  ARCHIVE DESTINATION "${INSTALL_PYTHON_DIRECTORY}")
