# The rti1516e includes
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include/rti1516e)

IF(OPENRTI_BUILD_SHARED)
  ADD_LIBRARY(rti1516e_py MODULE Module.cpp)
  SET_PROPERTY(TARGET rti1516e_py PROPERTY PREFIX "")
  SET_PROPERTY(TARGET rti1516e_py PROPERTY OUTPUT_NAME "rti1516e")
  IF(WIN32)
    SET_PROPERTY(TARGET rti1516e_py PROPERTY SUFFIX ".pyd")
  ENDIF()
  TARGET_LINK_LIBRARIES(rti1516e_py rti1516e fedtime1516e ${PYTHON_LIBRARIES})
ENDIF()

IF(OPENRTI_INSTALL_WITH_RPATH)
  SET_PROPERTY(TARGET rti1516e_py PROPERTY INSTALL_RPATH "$ORIGIN/../..")
  SET_PROPERTY(TARGET rti1516e_py APPEND PROPERTY LINK_FLAGS "${OPENRTI_RPATH_LINK_FLAGS}")
ENDIF()

INSTALL(TARGETS rti1516e_py
  RUNTIME DESTINATION "${INSTALL_PYTHON_DIRECTORY}"
  LIBRARY DESTINATION "${INSTALL_PYTHON_DIRECTORY}"
  ARCHIVE DESTINATION "${INSTALL_PYTHON_DIRECTORY}")
